Fix HTML wide alignment.

--- a/static/style.css
+++ b/static/style.css
@@ -187,11 +187,6 @@ body {
 	height: 100%;
 	padding: 0;
 }
-
-.sideclock .meta {
-	border-bottom: 2px solid transparent;
-}
-
 .sideclock .day {
 	border: 1px transparent;
 	min-width: 0;
@@ -208,13 +203,14 @@ body {
 
 .days .longevents {
     grid-row: 2;
-    grid-column-start: 1;
+    grid-column-start: 2;
     position: relative;
 }
 
 .days {
 	display: grid;
         grid-template-rows: 4em 4em auto;
+        grid-template-columns: 5em auto;
 	width: 100%;
 	height: 100%;
 	padding: 0;
@@ -238,19 +234,6 @@ body {
 	width: 2.5em;
 }
 
-/* .wholeday { */
-/* 	position: relative; */
-/* 	width: 100%; */
-/* 	height: calc(3 * 1.5em); */
-/* 	padding-bottom: 2px; */
-/* 	border-bottom: 2px solid black; */
-/* } */
-
-.wholeday .event {
-	/* max-height: 1.5em; */
-	max-height: 33%;
-}
-
 /*
  * This makes the borders of the object be part of the size.
  * Making placing it on the correct line much simpler.
@@ -269,6 +252,7 @@ body {
 
 .sideclock .clock {
 	border: none;
+        grid-row: 3;
 }
 
 .clocktext {
